# Zenith

./: CMakeLists.txt  LICENSE  PluginProcessor.h  README.md
.github/workflows/: build.yml  wasm.yml
Source/Core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h
Source/DSP/Core/: Effect.cpp  Effect.h  EffectFactory.cpp  EffectFactory.h  EffectRack.cpp  EffectRack.h
Source/DSP/Core/Effects/Creative/: Creative.cpp  Creative.h  CreativeExtra.cpp  CreativeExtra.h
Source/DSP/Core/Effects/Delay/: Delay.cpp  Delay.h  DelayExtra.cpp  DelayExtra.h
Source/DSP/Core/Effects/Distortion/: Distortion.cpp  Distortion.h  DistortionExtra.cpp  DistortionExtra.h
Source/DSP/Core/Effects/Dynamics/: Dynamics.cpp  Dynamics.h  DynamicsExtra.cpp  DynamicsExtra.h
Source/DSP/Core/Effects/EQ/: EQ.cpp  EQ.h  EQExtra.cpp  EQExtra.h
Source/DSP/Core/Effects/MIDI/: MIDI.cpp  MIDI.h  MIDIExtra.cpp  MIDIExtra.h
Source/DSP/Core/Effects/Modulation/: Modulation.cpp  Modulation.h  ModulationExtra.cpp  ModulationExtra.h
Source/DSP/Core/Effects/Reverb/: Reverb.cpp  Reverb.h  ReverbExtra.cpp  ReverbExtra.h
Source/DSP/Core/Effects/Spatial/: Spatial.cpp  Spatial.h  SpatialExtra.cpp  SpatialExtra.h
Source/DSP/Core/Effects/Utility/: Utility.cpp  Utility.h  UtilityExtra.cpp  UtilityExtra.h
Source/Synth/: SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/UI/: EffectPanel.cpp  EffectPanel.h  Knob.cpp  Knob.h  LookAndFeel.cpp  LookAndFeel.h
Source/Utils/: MathHelpers.h  ParameterHelpers.h
Web/: app.js  index.html
Web/wasm/: build.sh  zenith_dsp.cpp
